# aftershave-u

./: db.sqlite3  manage.py
aftershave-u/: Procfile  db.sqlite3  pyproject.toml  render.yaml  requirements.txt  tasks.txt
aftershave-u/aftershave_u/: asgi.py  render.yaml  settings.py  urls.py  views.py
aftershave-u/aftershave_u/templates/: _base.html  about.html  index.html
aftershave-u/blog/: admin.py  models.py  urls.py  views.py
aftershave-u/blog/migrations/: 0003_rename_category_brands_alter_brands_options_and_more.py
aftershave-u/blog/templates/blog/: brands.html  creators.html  detail.html  search.html
aftershave-u/static/css/: style.css
aftershave-u/staticfiles/js/: script.js.br
aftershave_u/: settings.py  sitemaps.py  urls.py  wsgi.py
aftershave_u/templates/: _base.html  index.html
blog/: urls.py
blog/migrations/: 0001_initial.py  0002_category_creators_alter_post_options.py  0004_post_brands_post_creators.py  0005_remove_post_creators_delete_creators.py  0006_post_status.py
blog/templates/blog/: detail.html
staticfiles/: staticfiles.json
staticfiles/css/: style.css.br
