[tool.poetry]
name = "aftershave-u"
version = "0.1.0"
description = ""
authors = ["BXS-Archipelago <bxs@tutanota.com>"]
readme = "README.md"
packages = [{include = "aftershave_u"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
