[tool.poetry]
name = "aftershave-u"
version = "0.1.0"
description = ""
authors = ["BXS-Archipelago <bxs@tutanota.com>"]
readme = "README.md"
packages = [{include = "aftershave_u"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
